syntax = "proto3";

option csharp_namespace = "Twitter.Clone.Settings";

package notification;

service Notification {
  rpc GetUserNotificationSettings (GetUserNotificationSettingsRequest) 
  returns (GetUserNotificationSettingsReply) {}
}

message GetUserNotificationSettingsRequest {
  string user_id = 1;
}

message EmailNotificationSettingsReply{
	bool is_active = 1;
	bool is_mention_active = 2;
	bool is_direct_message_active = 3;
	bool is_follow_active = 4;
}

message SmsNotificationSettingsReply{
	bool is_active = 1;
	bool is_password_change_active = 2;
}

message GetUserNotificationSettingsReply {
  EmailNotificationSettingsReply email = 1;
  SmsNotificationSettingsReply sms = 2;
}